# sentinel-ops

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  testing.md
backend/: Dockerfile
backend/app/: config.py  container.py  main.py  seed.py  time_utils.py
backend/app/analysis/: __init__.py  alert_engine.py  anomaly_detector.py  engine.py  health_score.py  trend_detector.py
backend/app/api/: dependencies.py
backend/app/ingestion/: __init__.py  publisher.py  service.py  validator.py
backend/app/models/: __init__.py  domain.py
backend/app/repositories/: __init__.py  fleet_repository.py  interfaces.py  postgres.py  sqlite.py
backend/app/schemas/: __init__.py  alerts.py  simulation.py  telemetry.py
backend/app/services/: __init__.py  alert_service.py  fleet_service.py  grafana_live.py
backend/app/simulation/: __init__.py  service.py
backend/tests/: conftest.py  test_analysis.py  test_api_contract.py  test_config_and_control.py  test_grafana_live.py  test_ingestion.py
docs/: architecture.md  detection-strategy.md
docs/Flowcharts/: 01-architecture-flow.excalidraw  02-detection-hysteresis.excalidraw  03-lifecycle-and-diagnosis.excalidraw
frontend/src/api/: client.js
frontend/src/components/: dashboard.css
frontend/src/pages/: dashboard.js  index.html
frontend/src/types/: metrics.js
grafana/dashboards/: sentinelops-alert-detail.json  sentinelops-device-detail.json  sentinelops.json
grafana/provisioning/dashboards/: sentinelops.yml
grafana/provisioning/datasources/: postgres.yml
(+8 files in other folders)
